# HaloMusicPlayer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
crates/halo-core/: Cargo.toml
crates/halo-core/src/: audio_event.rs  lib.rs  media_input.rs  now_playing.rs  playback.rs  queue.rs
docs/: ACTIVE_WORK.md  HAZARDS.md
docs/plan/: halo-cross-platform-architecture.md  halo-future-features.md
docs/process/: clean-icon-cache.bat  updating-app-icon.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: halo.desktop.hbs
src-tauri/migrations/: 001_initial.sql  002_stats.sql  004_eq_presets.sql  005_smart_playlists.sql  006_device_eq.sql  007_lastfm.sql  007_waveform.sql  008_waveform_rms.sql
src-tauri/src/: lib.rs  lib.rs.tmp.6723.854d8a0a0483  main.rs  tray.rs  watcher.rs
src-tauri/src/audio/: eq.rs  local_input.rs  media_controls.rs  mod.rs  resampler.rs  spectrum.rs
src-tauri/src/commands/: eq.rs  folders.rs  lastfm.rs  library.rs  lyrics.rs  metadata_editor.rs  mod.rs  player.rs  playlists.rs  scan.rs  search.rs  sleep_timer.rs  smart_playlists.rs  stats.rs  ui.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/scanner/: art.rs  metadata.rs  mod.rs  walker.rs  waveform.rs
src/components/: add-to-playlist-dialog.tsx  album-art.tsx  command-palette.tsx  lyrics-panel.tsx  metadata-editor-dialog.tsx  mini-player.tsx  now-playing.tsx  sidebar.tsx  sleep-timer-button.tsx  title-bar.tsx  virtual-grid.tsx  visualizer.tsx  waveform-seek.tsx
src/components/ui/: slider.tsx  star-rating.tsx
src/lib/: command-palette-store.ts  format.ts  ipc.ts  library-events.ts  lyrics-store.ts  player-store.ts  scroll-memory.ts  tab-memory.ts  theme-store.ts
src/pages/: album-artists.tsx  albums.tsx  all-songs.tsx  artists.tsx  composers.tsx  folders-view.tsx  genres.tsx  library.tsx  most-played.tsx  playlist-detail.tsx  playlists.tsx  queue.tsx  recently-played.tsx  settings.tsx  smart-playlist-detail.tsx  years.tsx
